--- a/style/index.css
+++ b/style/index.css
@@ -55,7 +55,7 @@ footer {
   height: 200px;
   width: 200px;
   object-fit: cover;
-  /* border-radius: 100px; */
+  border-radius: 10px;
   border: 2px solid steelblue;
 }
 .student-container .card:hover img {
